# acpica-rust-bindings

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  acrust.h  build.rs
.cargo/: config.toml
src/: lib.rs  testing.rs  types.rs
src/bindings/: buffer.rs  consts.rs  functions.rs  mod.rs  statics.rs
src/bindings/types/: functions.rs  mod.rs  object.rs  tables.rs
src/bindings/types/tables/: aest.rs  cedt.rs  csrt.rs  dbg2.rs  dmar.rs  drtm.rs  einj.rs  erst.rs  fadt.rs  fpdt.rs  gtdt.rs  hest.rs  hmat.rs  hpet.rs  ibft.rs  iort.rs  ivrs.rs  madt.rs  misc.rs  mpst.rs  nfit.rs  pcct.rs  phat.rs  pmtt.rs  pptt.rs  prmt.rs  rasf.rs  rsdt.rs  sdev.rs  srat.rs  trusted_platform.rs  viot.rs  watchdog.rs  windows.rs
src/interface/: devices.rs  mod.rs  object.rs  status.rs  tables.rs  types.rs
src/interface/handler/: bindings.rs  handler_trait.rs  mod.rs
src/interface/handler/bindings/: acpi_dump.rs  alloc.rs  cache.rs  debugger.rs  interrupts.rs  io.rs  lock.rs  memory.rs  overrides.rs  pci.rs  printf.rs  semaphore.rs  threading.rs
src/interface/types/: generic_address.rs  object.rs  tables.rs
src/interface/types/tables/: fadt.rs  madt.rs  mcfg.rs  uefi.rs
