[package]
name = "acpica-bindings"
type = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = {version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"]}
log = {version= "*", default-features = false}

# Optional dependencies
bitvec = {version = "1", optional = true, default-features = false}


[features]
builtin_cache = ["bitvec/alloc"]
builtin_alloc = []
builtin_lock = []
builtin_semaphore = []

default = ["builtin_cache", "builtin_alloc", "builtin_lock", "builtin_semaphore"]