[package]
name = "acpica-bindings"
type = "lib"
version = "0.1.0"
edition = "2021"

authors = ["Mark Ross"]
description = "Incomplete rust bindings to Intel's ACPICA kernel subsystem"
readme = "README.md"
repository = "https://https://github.com/MarkRoss470/acpica-rust-bindings"
license = "MIT"
keywords = ["osdev", "acpi"]
categories = ["api-bindings", "hardware-support", "no-std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = {version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"]}
log = {version= "0.4", default-features = false}
bitfield-struct = {version="0.5", default-features = false}

# Optional dependencies
bitvec = {version = "1", optional = true, default-features = false}
x86_64 = {version = "0.14", optional = true, default-features = false}

[build-dependencies]
flate2 = {version = "1"}
tar = {version = "0.4"}
cc  = "1.0"

[features]
builtin_cache = ["bitvec/alloc"]
builtin_lock = []
builtin_semaphore = []

default = ["builtin_cache", "builtin_lock", "builtin_semaphore"]